src/objects/JobAssignmentOverride__c.object
<CustomObject>
    <fields>
        <fullName>BillingTitle__c</fullName>
        <label>Billing Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Assignment_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDateActive__c</fullName>
        <label>End Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobAssignmentOverrideID__c</fullName>
        <externalId>true</externalId>
        <label>Job Assignment Override ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectTask</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Job Assignment Overrides</relationshipLabel>
        <relationshipName>Job_Assignment_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Job Assignment Overrides</relationshipLabel>
        <relationshipName>Job_Assignment_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordVersionNumber__c</fullName>
        <label>Record Version Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateActive__c</fullName>
        <label>Start Date Active</label>
        <type>Date</type>
    </fields>
    <label>Job Assignment Override</label>
    <nameField>
        <label>Job Assignment Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Assignment Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>